calico-policies/private-network-isolation/eu-gb/allow-egress-pods-private.yaml
# This policy opens port 53 and 5353 for DNS,
# port 2049 for communication with NFS file servers,
# ports 443 and 3260 for communication to block storage,
# port 10250 for the openVPN pod, port 4443 or 6443 for metrics-server, and
# port 2040 and 2041 on 172.21.0.0/24 for the master API server local proxy. It also
# allows pod access to other pods, denies access to private networks but allows access to
# public networks, and allows access in each zone of the region to the master.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-egress-pods-private
spec:
  egress:
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 2049
      - 3260
      - 10250
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      ports:
      - 53
      - 5353
      - 443
      - 4443 # Kubernetes 1.19 or later
      - 6443 # OpenShift 4.3 or later
      - 2049
      - 3260
      - 10250
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: UDP
  - action: Allow
    destination:
      ports:
      - 2040:2041
      nets:
      - 172.20.0.0/24
    protocol: TCP
  - action: Allow
    destination:
      selector: projectcalico.org/orchestrator == 'k8s'
    source: {}
  # Denies pod egress to private networks. If workers are connected to a public VLAN,
  # pod egress is permitted to public networks.
  - action: Allow
    destination:
      notNets:
      - 10.0.0.0/8
      - 172.16.0.0/12
      - 192.168.0.0/16
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for uk-south: lon02, lon04, lon05, lon06
      - 166.9.34.16/32
      - 166.9.34.17/32
      - 166.9.34.41/32
      - 166.9.34.42/32
      - 166.9.34.45/32
      - 166.9.34.49/32
      - 166.9.34.5/32
      - 166.9.34.50/32
      - 166.9.34.54/32
      - 166.9.34.6/32
      - 166.9.34.76/32
      - 166.9.34.77/32
      - 166.9.36.10/32
      - 166.9.36.11/32
      - 166.9.36.22/32
      - 166.9.36.23/32
      - 166.9.36.30/32
      - 166.9.36.52/32
      - 166.9.36.53/32
      - 166.9.36.54/32
      - 166.9.36.57/32
      - 166.9.36.64/32
      - 166.9.36.65/32
      - 166.9.36.95/32
      - 166.9.36.96/32
      - 166.9.38.17/32
      - 166.9.38.18/32
      - 166.9.38.28/32
      - 166.9.38.46/32
      - 166.9.38.47/32
      - 166.9.38.50/32
      - 166.9.38.53/32
      - 166.9.38.54/32
      - 166.9.38.6/32
      - 166.9.38.7/32
      - 166.9.38.75/32
      - 166.9.38.77/32
      - 166.9.244.12/32
      - 166.9.244.48/32
      - 166.9.244.75/32
      ports:
      - 20000:32767
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for uk-south: lon02, lon04, lon05, lon06
      - 166.9.34.16/32
      - 166.9.34.17/32
      - 166.9.34.41/32
      - 166.9.34.42/32
      - 166.9.34.45/32
      - 166.9.34.49/32
      - 166.9.34.5/32
      - 166.9.34.50/32
      - 166.9.34.54/32
      - 166.9.34.6/32
      - 166.9.34.76/32
      - 166.9.34.77/32
      - 166.9.36.10/32
      - 166.9.36.11/32
      - 166.9.36.22/32
      - 166.9.36.23/32
      - 166.9.36.30/32
      - 166.9.36.52/32
      - 166.9.36.53/32
      - 166.9.36.54/32
      - 166.9.36.57/32
      - 166.9.36.64/32
      - 166.9.36.65/32
      - 166.9.36.95/32
      - 166.9.36.96/32
      - 166.9.38.17/32
      - 166.9.38.18/32
      - 166.9.38.28/32
      - 166.9.38.46/32
      - 166.9.38.47/32
      - 166.9.38.50/32
      - 166.9.38.53/32
      - 166.9.38.54/32
      - 166.9.38.6/32
      - 166.9.38.7/32
      - 166.9.38.75/32
      - 166.9.38.77/32
      - 166.9.244.12/32
      - 166.9.244.48/32
      - 166.9.244.75/32
      ports:
      - 20000:32767
    protocol: TCP
    source: {}
  order: 1500
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
