calico-policies/private-network-isolation/eu-gb/allow-private-service-endpoint.yaml
# This policy allows outgoing network traffic from worker nodes in each zone
# of your cluster to the cluster master through the private service endpoint.
# Note that you must allow outgoing traffic for all of the zones within the region.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-service-endpoint
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for uk-south: lon02, lon04, lon05, lon06
      - 166.9.34.16/32
      - 166.9.34.17/32
      - 166.9.34.41/32
      - 166.9.34.42/32
      - 166.9.34.45/32
      - 166.9.34.49/32
      - 166.9.34.5/32
      - 166.9.34.50/32
      - 166.9.34.54/32
      - 166.9.34.6/32
      - 166.9.34.76/32
      - 166.9.34.77/32
      - 166.9.36.10/32
      - 166.9.36.11/32
      - 166.9.36.12/32
      - 166.9.36.13/32
      - 166.9.36.22/32
      - 166.9.36.23/32
      - 166.9.36.30/32
      - 166.9.36.52/32
      - 166.9.36.53/32
      - 166.9.36.54/32
      - 166.9.36.57/32
      - 166.9.36.64/32
      - 166.9.36.65/32
      - 166.9.36.95/32
      - 166.9.36.96/32
      - 166.9.38.17/32
      - 166.9.38.18/32
      - 166.9.38.28/32
      - 166.9.38.46/32
      - 166.9.38.47/32
      - 166.9.38.50/32
      - 166.9.38.53/32
      - 166.9.38.54/32
      - 166.9.38.6/32
      - 166.9.38.7/32
      - 166.9.38.75/32
      - 166.9.38.77/32
      - 166.9.244.12/32
      - 166.9.244.48/32
      - 166.9.244.75/32
      ports:
      - 20000:32767
      - 443
    protocol: UDP
    source: {}
  - action: Allow
    destination:
      nets:
      # Control plane IP addresses for uk-south: lon02, lon04, lon05, lon06
      - 166.9.34.16/32
      - 166.9.34.17/32
      - 166.9.34.41/32
      - 166.9.34.42/32
      - 166.9.34.45/32
      - 166.9.34.49/32
      - 166.9.34.5/32
      - 166.9.34.50/32
      - 166.9.34.54/32
      - 166.9.34.6/32
      - 166.9.34.76/32
      - 166.9.34.77/32
      - 166.9.36.10/32
      - 166.9.36.11/32
      - 166.9.36.12/32
      - 166.9.36.13/32
      - 166.9.36.22/32
      - 166.9.36.23/32
      - 166.9.36.30/32
      - 166.9.36.52/32
      - 166.9.36.53/32
      - 166.9.36.54/32
      - 166.9.36.57/32
      - 166.9.36.64/32
      - 166.9.36.65/32
      - 166.9.36.95/32
      - 166.9.36.96/32
      - 166.9.38.17/32
      - 166.9.38.18/32
      - 166.9.38.28/32
      - 166.9.38.46/32
      - 166.9.38.47/32
      - 166.9.38.50/32
      - 166.9.38.53/32
      - 166.9.38.54/32
      - 166.9.38.6/32
      - 166.9.38.7/32
      - 166.9.38.75/32
      - 166.9.38.77/32
      - 166.9.244.12/32
      - 166.9.244.48/32
      - 166.9.244.75/32
      ports:
      - 20000:32767
      - 443
    protocol: TCP
    source: {}
  order: 1900
  selector: ibm.role == 'worker_private'
  types:
  - Egress
