calico-policies/private-network-isolation/eu-gb/allow-private-services-pods.yaml
# This policy allows outgoing network traffic from pods to other
# IBM Cloud services that support private service endpoints.
# The example nets in this policy are for IBM Cloud Container Registry,
# IBM Cloud Monitoring, and IBM Cloud Logs.

apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: allow-private-services-pods
spec:
  egress:
  - action: Allow
    destination:
      nets:
      # IBM Cloud Container Registry: Global (US East) registry subnets
      - 166.9.251.49/32
      - 166.9.251.82/32
      - 166.9.251.113/32
      # IBM Cloud Container Registry: UK South registry subnets
      - 166.9.244.9/32
      - 166.9.244.45/32
      - 166.9.244.73/32
      ports:
      - 443
      - 4443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring ingest: eu-gb
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_ingestion_private
      - 166.9.34.56/32
      - 166.9.36.71/32
      - 166.9.245.189/32
      - 166.9.245.221/32
      - 166.9.245.253/32
      ports:
      - 6443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Monitoring API: eu-gb
      # Taken from: https://cloud.ibm.com/docs/monitoring?topic=monitoring-endpoints#endpoints_rest_api
      - 166.9.244.29/32
      - 166.9.244.59/32
      - 166.9.245.189/32
      - 166.9.245.221/32
      - 166.9.245.253/32
      ports:
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: eu-gb
      # Taken from: https://cloud.ibm.com/docs/log-analysis?topic=log-analysis-endpoints
      - 166.9.34.2/32
      - 166.9.34.4/32
      - 166.9.36.2/32
      - 166.9.36.3/32
      - 166.9.38.4/32
      - 166.9.38.5/32
      # New IP addresses added on 1/19/2023
      - 166.9.36.105/32 
      - 166.9.34.79/32 
      - 166.9.38.84/32
      # New IP addresses added on 10/19/2023
      - 166.9.244.22/32
      - 166.9.244.53/32
      - 166.9.244.85/32
      # End new IP address list
      ports:
      - 80
      - 443
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: EU GB nets
      - 166.9.34.18/32
      - 166.9.36.5/32
      - 166.9.38.20/32
      ports:
      - 514
      - 6514
    protocol: TCP
    source: {}
  - action: Allow
    destination:
      nets:
      # IBM Cloud Logs: EU GB nets
      - 166.9.34.19/32
      - 166.9.36.6/32
      - 166.9.38.21/32
      ports:
      - 514
    protocol: UDP
    source: {}
  order: 1900
  selector: projectcalico.org/orchestrator == 'k8s'
  types:
  - Egress
